# IXH24-testing

./: .gitignore  README.md  conditional_escrows.ipynb  create_wallet.ipynb  esecuzione_asincrona.ipynb  example_escrow_create_transaction.py  flake.nix  general_testing.ipynb  payment.ipynb  pyproject.toml  shell.nix  utils.py
Quickstart Tutorial by XRPL website/: NFT_project.py  NFT_project_response.py  email_utils.py  lesson1-send-xrp.py  mod1.py  notes.md  server.py  test.http  utils.py
